project(chestnut)

SET(CHESTNUT_H ./snapshot.h)
aux_source_directory(. CHESTNUT_C)

# include
include_directories(../../foundation)
include_directories(../../3rd/lua)
include_directories(../../skynet-src)
IF(MSVC)
include_directories(../../3rd/pthread-win32)
include_directories(../../3rd/posix)
ENDIF(MSVC)

# definitions
IF(MSVC)
ADD_DEFINITIONS(-DLUA_BUILD_AS_DLL)
ADD_DEFINITIONS(-DNOUSE_JEMALLOC -DHAVE_STRUCT_TIMESPEC -DUSE_PTHREAD_LOCK -D_CRT_SECURE_NO_WARNINGS)
ELSE(MSVC)
ADD_DEFINITIONS(-Wno-unused-function -Wno-unused-variable -Werror)
SET(CMAKE_C_FLAGS "-Wall -std=gnu99")
SET(CMAKE_C_FLAGS_DEBUG "-g -O0")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
ENDIF(MSVC)
IF(CMAKE_BUILD_TYPE MATCHES "Debug")
ADD_DEFINITIONS(-D_DEBUG)
ENDIF()
ADD_DEFINITIONS(-DSKYNET)

add_library(chestnut SHARED ${CHESTNUT_H} ${CHESTNUT_C})
set_target_properties(chestnut PROPERTIES PREFIX "")
set_target_properties(chestnut PROPERTIES SUFFIX ".so")
set_target_properties(chestnut PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ../../../luaclib)
set_target_properties(chestnut PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ../../../luaclib)

IF(MSVC)
set_target_properties(chestnut PROPERTIES FOLDER "lualib")
#target_link_libraries(chestnut ../../../libbase)
target_link_libraries(chestnut ws2_32)
target_link_libraries(chestnut ../../../3rd/pthread-win32/bin/x64_MSVC2015.Debug/pthread_dll)
ENDIF()
target_link_libraries(chestnut ../../../strawberry)
target_link_libraries(chestnut ../../../libfixedptmath)

ADD_DEPENDENCIES(chestnut strawberry)
